test/fail_compile/bad_arrows.tas
b->c+5 # must fail
b->c*a # must fail
[a]->a<-5 # must fail
b->c+5 # must fail
